<resources>
    <string name="app_name">LightController</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_color">ColorActivity</string>
    <string name="switchLabel">Switch</string>
    <string name="colorButtonText">Color</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="statistics_btn_text">Statistics</string>
    <string name="title_activity_all_time_stats">AllTimeStatsActivity</string>
    <string name="edit_dialog_title">Edit device</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">STATISTICS</string>
    <string name="backdrop_subtitle">Keep track of your light</string>
    <string name="title_activity_previous_day_stats">PreviousDayStats</string>
    <string name="brightness_text">Brightness</string>
    <string name="motionLabel">motion</string>
    <string name="title_activity_motion_graph">MotionGraphActivity</string>
    <string name="device_name">Mr.Lighty</string>
    <string name="ip_address">0.0.0.0</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
