<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#AAFAFAF8"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:contentDescription="@string/edit_dialog_title" />
    <EditText
        android:id="@+id/deviceName"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:shadowColor="@color/black"
        android:backgroundTint="@color/black"
        android:textColorLink="@color/black"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"
        android:hint="@string/device_name" />
    <EditText
        android:id="@+id/address"
        android:inputType="text"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:textColorLink="@color/black"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:hint="@string/ip_address"/>
</LinearLayout>